fixing typo in README.md in chatbot-intetn-based directory

--- a/train/chatbot-intents-based/chatbot-intents-base.ipynb
+++ b/train/chatbot-intents-based/chatbot-intents-base.ipynb
@@ -1324,7 +1324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save('../../model/chatbot_model.h5')\n"
+    "model.save('../../model/chatbot_model.h5')"
    ]
   }
  ],
